--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "blade-ui-kit/blade-heroicons": "^2.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.27",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.3",
+        "wireui/wireui": "^1.18"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
+        "laravel/pint": "^1.13",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
@@ -22,7 +27,7 @@
         "pestphp/pest-plugin-laravel": "^2.0",
         "spatie/laravel-ignition": "^2.0"
     },
-    "autoload": {
+    "autoload":  {
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
@@ -47,7 +52,13 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "format": "./vendor/bin/pint",
+        "test": [
+            "./vendor/bin/pint --test",
+            "./vendor/bin/pest"
+        ],
+        "test:parallel": "./vendor/bin/pest --parallel"
     },
     "extra": {
         "laravel": {
