--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.3",
-        "wireui/wireui": "^1.18"
+        "livewire/livewire": "2.12.6",
+        "wireui/wireui": "^1.17"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
